# authkestra

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NEXT_STEPS.md  OIDC_DESIGN.md  README.md  TECHNICAL_DESIGN.md  crates.js  deep-search.md  docker-compose.yml  findings_22_23.md  help.html  libtest_send.rlib  libtest_send_2.rlib  libtest_sync.rlib  rewrite_providers.py  rewrite_sql.py  scratch.rs  settings.html  src-files.js  test_handler_3.rs  test_key.pem  test_send.rs  test_send_2.rs
actix_credentials/: all.html  fn.main.html  index.html  struct.AppState.html  struct.LocalUser.html  struct.LoginCredentials.html  struct.MyCredentialsProvider.html  struct.MyUserMapper.html  struct.index.html  struct.login.html  struct.protected.html
actix_github/: all.html  fn.main.html  index.html  struct.AppState.html  struct.index.html  struct.protected.html
actix_resource_server/: all.html  fn.main.html  index.html  struct.MyClaims.html  struct.index.html  struct.protected.html
actix_spa_jwt/: all.html  fn.main.html  index.html  sidebar-items.js  struct.AppState.html  struct.callback.html  struct.callback_handler.html  struct.frontend.html  (+5 more)
authkestra/: Cargo.toml  all.html  index.html  sidebar-items.js
authkestra-actix/: Cargo.toml  README.md
authkestra-actix/src/: helpers.rs  lib.rs  op.rs  op.rs.patch
authkestra-axum/: Cargo.toml  README.md
authkestra-axum/src/: helpers.rs  lib.rs  op.rs  op.rs.orig  op.rs.patch  op_debug.rs  op_test.rs
authkestra-engine/: Cargo.toml
authkestra-engine/src/: engine.rs  lib.rs  tests.rs
authkestra-engine/src/auth/: discovery.rs  mod.rs  session.rs  state.rs
authkestra-engine/src/flow/: client_credentials_flow.rs  device_flow.rs  mod.rs  oauth2.rs
authkestra-engine/src/protocol/: mod.rs
authkestra-engine/src/token/: mod.rs
authkestra-engine/tests/: oauth2_flow_tests.rs
authkestra-examples/: Cargo.toml
authkestra-examples/examples/: actix_basic_setup.rs  actix_op_server.rs  axum_basic_setup.rs  axum_oauth2_github.rs  axum_oauth_stateless.rs  axum_oidc_google.rs  axum_op_server.rs  axum_resource_server.rs  axum_resource_server_strategy.rs  axum_session_redis.rs
authkestra-examples/static/: index.html
authkestra-flow/: Cargo.toml  README.md
authkestra-flow/src/: client_credentials_flow.rs  device_flow.rs  lib.rs  oauth2.rs
authkestra-guard/: Cargo.toml  README.md
authkestra-guard/src/: jwt.rs  lib.rs
authkestra-macros/: Cargo.toml  README.md
authkestra-macros/src/: axum.rs  lib.rs
authkestra-oidc/: Cargo.toml  README.md
authkestra-oidc/src/: discovery.rs  error.rs  jwks.rs  lib.rs  provider.rs
authkestra-op/: Cargo.toml
authkestra-op/src/: client.rs  code.rs  config.rs  error.rs  lib.rs  refresh.rs
authkestra-op/src/handlers/: authorize.rs  discovery.rs  jwks.rs  mod.rs  token.rs  userinfo.rs
authkestra-providers/: Cargo.toml
authkestra-providers/src/: discord.rs  github.rs  google.rs  lib.rs
authkestra-providers/tests/: discord_oauth.rs  github_oauth.rs  google_oauth.rs
authkestra-resource/: Cargo.toml
authkestra-resource/src/: jwt.rs  lib.rs
authkestra-session/: Cargo.toml  README.md
authkestra-session-memory/: Cargo.toml
authkestra-session-memory/src/: lib.rs
authkestra-session-redis/: Cargo.toml
authkestra-session-redis/src/: lib.rs
authkestra-session-sql/: Cargo.toml
authkestra-session-sql/src/: lib.rs
authkestra-session/src/: lib.rs  memory.rs  redis.rs  sql.rs
authkestra/providers/: index.html
authkestra/providers/discord/: index.html  struct.DiscordProvider.html
authkestra/providers/github/: index.html  struct.GithubProvider.html
authkestra/providers/google/: index.html  sidebar-items.js  struct.GoogleProvider.html
authkestra/src/: lib.rs
authkestra/tests/: typestate_tests.rs
authly-actix/: Cargo.toml  README.md
authly-actix/src/: helpers.rs  lib.rs
authly-flow/: Cargo.toml  README.md
authly-flow/src/: client_credentials_flow.rs  device_flow.rs  lib.rs
authly-providers-discord/: Cargo.toml  README.md
authly-providers-discord/src/: lib.rs
authly-providers-discord/tests/: discord_oauth.rs
authly-providers-github/: Cargo.toml  README.md
authly-providers-github/src/: lib.rs
authly-providers-github/tests/: github_oauth.rs
authly-session/: Cargo.toml  README.md
authly-session/src/: lib.rs  redis_store.rs  sql_store.rs
authly-token/: Cargo.toml  README.md
authly-token/src/: lib.rs
crates/authkestra/: Cargo.toml
crates/authkestra-actix/: Cargo.toml  README.md
crates/authkestra-actix/src/: helpers.rs  lib.rs  op.rs
crates/authkestra-axum/: Cargo.toml  README.md
crates/authkestra-axum/src/: helpers.rs  lib.rs  op.rs
crates/authkestra-engine/: Cargo.toml
crates/authkestra-engine/src/: aliases.rs  engine.rs  lib.rs  tests.rs
crates/authkestra-engine/src/auth/: session.rs
crates/authkestra-engine/src/flow/: mod.rs
crates/authkestra-engine/src/store/: memory.rs  mod.rs  redis.rs  sql.rs
crates/authkestra-engine/src/token/: jwk.rs  mod.rs
crates/authkestra-macros/: Cargo.toml  README.md
crates/authkestra-macros/src/: actix.rs  axum.rs  derive.rs  lib.rs
crates/authkestra-resource/: Cargo.toml  README.md
crates/authkestra-resource/src/: lib.rs
crates/authkestra-session/: Cargo.toml
crates/authkestra-session/src/: redis.rs
crates/authkestra/examples/: actix_basic_setup.rs  actix_op_server.rs  axum_basic_setup.rs  axum_data_layer_macros.rs  axum_oauth2_github.rs  axum_oauth_stateless.rs  axum_oidc_google.rs  axum_op_server.rs  axum_resource_server_strategy.rs  axum_session_redis.rs  axum_sql_store.rs
crates/authkestra/examples/actix/: basic_setup.rs  oauth2_github.rs  oauth_stateless.rs  oidc_google.rs  op_server.rs  resource_server_strategy.rs
crates/authkestra/examples/axum/: basic_setup.rs  data_layer_macros.rs  oauth2_github.rs  oauth_stateless.rs  oidc_google.rs  op_server.rs  resource_server.rs  resource_server_strategy.rs
crates/authkestra/examples/core/: client_credentials.rs
crates/authkestra/src/: lib.rs
crates/authkestra/tests/: examples_e2e.rs  typestate_tests.rs
(+4015 files in other folders)
