[workspace]
resolver = "2"
members = [
    "authkestra-engine",
    "authkestra-session",
    "authkestra-session-memory",
    "authkestra-session-redis",
    "authkestra-session-sql",
    "authkestra-providers",
    "authkestra-axum",
    "authkestra-macros",
    "authkestra-oidc",
    "authkestra-actix",
    "authkestra-resource",
    "authkestra",
    "authkestra-examples",
]
