[workspace]
resolver = "2"
members = [
    "authkestra-engine",
    "authkestra-session",
    "authkestra-providers",
    "authkestra-axum",
    "authkestra-macros",
    "authkestra-oidc",
    "authkestra-actix",
    "authkestra-resource",
    "authkestra",
    "authkestra-examples",
    "authkestra-op",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "oauth2", "oidc"]
categories = ["authentication"]

[workspace.dependencies]
authkestra-engine = { version = "0.1.2", path = "authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "authkestra-session" }
authkestra-providers = { version = "0.1.1", path = "authkestra-providers" }
authkestra-axum = { version = "0.1.3", path = "authkestra-axum" }
authkestra-macros = { version = "0.1.0", path = "authkestra-macros" }
authkestra-oidc = { version = "0.1.2", path = "authkestra-oidc" }
authkestra-actix = { version = "0.1.3", path = "authkestra-actix" }
authkestra-resource = { version = "0.1.0", path = "authkestra-resource" }
authkestra = { version = "0.1.2", path = "authkestra" }
authkestra-examples = { version = "0.1.0", path = "authkestra-examples" }
authkestra-op = { version = "0.1.0", path = "authkestra-op" }
