[workspace]
resolver = "2"
members = [
    "crates/authkestra-engine",
    "crates/authkestra-providers",
    "crates/authkestra-axum",
    "crates/authkestra-macros",
    "crates/authkestra-oidc",
    "crates/authkestra-actix",
    "crates/authkestra-resource",
    "crates/authkestra",

    "crates/authkestra-op",
]

[workspace.package]
edition = "2021"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "oauth2", "oidc"]
categories = ["authentication"]

[workspace.dependencies]
authkestra-engine = { version = "0.1.2", path = "crates/authkestra-engine" }
authkestra-providers = { version = "0.1.1", path = "crates/authkestra-providers" }
authkestra-axum = { version = "0.1.3", path = "crates/authkestra-axum" }
authkestra-macros = { version = "0.1.0", path = "crates/authkestra-macros" }
authkestra-oidc = { version = "0.1.2", path = "crates/authkestra-oidc" }
authkestra-actix = { version = "0.1.3", path = "crates/authkestra-actix" }
authkestra-resource = { version = "0.1.0", path = "crates/authkestra-resource" }
authkestra = { version = "0.1.2", path = "crates/authkestra" }

authkestra-op = { version = "0.1.0", path = "crates/authkestra-op" }
rand = "0.9.2"
url = "2.5"
sha2 = "0.10"
