[package]
name = "authkestra-axum"
version = "0.1.3"
edition = "2021"
description = "Axum integration for the authkestra authentication framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "axum", "web", "middleware"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session", optional = true }
authkestra-resource = { version = "0.1.0", path = "../authkestra-resource", optional = true }
authkestra-macros = { version = "0.1.0", path = "../authkestra-macros", features = ["axum"], optional = true }
axum = "0.8.8"
jsonwebtoken = "10.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11.0"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["macros"]
macros = ["authkestra-macros"]
session = ["dep:authkestra-session", "authkestra-engine/session"]
flow = ["authkestra-engine/flow", "authkestra-engine/session", "authkestra-engine/token"]
token = ["authkestra-engine/token"]
guard = ["dep:authkestra-resource"]
