[package]
name = "authkestra-axum"
version = "0.1.3"
edition.workspace = true
description = "Axum integration for the authkestra authentication framework"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
authkestra-engine = { workspace = true }
authkestra-session = { workspace = true, optional = true }
authkestra-resource = { workspace = true, optional = true }
authkestra-macros = { workspace = true, optional = true, features = ["axum"] }
axum = "0.8.8"
jsonwebtoken = "10.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11.0"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[features]
default = ["macros"]
macros = ["authkestra-macros"]
session = ["dep:authkestra-session", "authkestra-engine/session"]
flow = ["authkestra-engine/flow", "authkestra-engine/session", "authkestra-engine/token"]
token = ["authkestra-engine/token"]
resource = ["dep:authkestra-resource"]
