[package]
name = "authkestra-engine"
version = "0.1.2"
edition = "2021"
description = "Unified authentication engine for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"

[dependencies]
# From authkestra-core
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json", "form"] }
url = "2.5"
http = "1"
thiserror = "2.0.18"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
base64 = "0.22.1"
rand = "0.9.2"

# From authkestra-flow
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"

# From authkestra-token
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
tokio = { version = "1.0", features = ["full"] }
aes-gcm = "0.10.3"
rsa = "0.9.6"

[features]
default = ["token", "flow"]
token = []
flow = []
session = []

