[package]
name = "authkestra-examples"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
authkestra = { path = "../authkestra", features = ["full"] }
authkestra-engine = { path = "../authkestra-engine", features = ["flow", "token", "session"] }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }
authkestra-session-memory = { version = "0.1.0", path = "../authkestra-session-memory" }
authkestra-session-redis = { version = "0.1.0", path = "../authkestra-session-redis" }
authkestra-session-sql = { version = "0.1.0", path = "../authkestra-session-sql", features = ["sqlite"] }
authkestra-guard = { path = "../authkestra-guard" }
authkestra-providers-github = { path = "../authkestra-providers-github" }
authkestra-providers-google = { path = "../authkestra-providers-google" }
authkestra-providers-discord = { path = "../authkestra-providers-discord" }
authkestra-actix = { path = "../authkestra-actix", features = ["flow", "session", "token"] }
authkestra-axum = { path = "../authkestra-axum", features = ["flow", "session", "token"] }
authkestra-oidc = { path = "../authkestra-oidc" }

actix-web = "4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
jsonwebtoken = "10.3.0"
base64 = "0.22.1"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.0", features = ["v4"] }

chrono = { version = "0.4", features = ["serde"] }
