[package]
name = "authkestra-examples"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
authkestra = { workspace = true, features = ["full"] }
authkestra-engine = { workspace = true, features = ["flow", "token", "session"] }
authkestra-session = { workspace = true, features = ["memory", "redis", "sql-sqlite"] }
authkestra-resource = { workspace = true }
authkestra-providers = { workspace = true, features = ["github", "google", "discord"] }
authkestra-actix = { workspace = true, features = ["flow", "session", "token"] }
authkestra-axum = { workspace = true, features = ["flow", "session", "token"] }
authkestra-oidc = { workspace = true }

actix-web = "4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-cookies = "0.11"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
redis = { version = "0.27", features = ["tokio-comp"] }
reqwest = { version = "0.13", features = ["json"] }
async-trait = "0.1"
jsonwebtoken = "10.3.0"
base64 = "0.22.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
actix-files = "0.6"
uuid = { version = "1.0", features = ["v4"] }

chrono = { version = "0.4", features = ["serde"] }
