[package]
name = "authkestra-guard"
version = "0.1.1"
edition = "2021"
description = "Authentication guard and strategies for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "guard", "middleware"]
categories = ["authentication"]

[dependencies]
authkestra-core = { version = "0.1.1", path = "../authkestra-core" }
async-trait = "0.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0.18"
http = "1"
base64 = "0.22.1"
