[package]
name = "authkestra-oidc"
version = "0.1.2"
edition = "2021"
description = "OIDC support for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oidc", "openid", "authentication"]
categories = ["authentication"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine", features = ["token"] }
authkestra-resource = { version = "0.1.0", path = "../authkestra-resource" }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
urlencoding = "2.1.3"
