[package]
name = "authkestra-oidc"
version = "0.1.2"
edition.workspace = true
description = "OIDC support for the authkestra framework"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
authkestra-engine = { workspace = true, features = ["token"] }
authkestra-resource = { workspace = true }
reqwest = { version = "0.13.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
async-trait = "0.1"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
urlencoding = "2.1.3"
