[package]
name = "authkestra-op"
version = "0.1.0"
edition = "2021"
description = "OpenID Provider (OP) support for the authkestra framework — issue tokens and run the authorization code grant, rather than only consuming an external IdP"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oidc", "openid", "authentication", "provider"]
categories = ["authentication"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine", features = ["token"] }
authkestra-resource = { version = "0.1.0", path = "../authkestra-resource" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.18"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
