[package]
name = "authkestra-providers"
version = "0.1.1"
edition = "2021"
description = "Consolidated OAuth providers for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "github", "google", "discord"]
categories = ["authentication"]

[features]
default = []
github = []
google = []
discord = ["urlencoding"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine" }
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = { version = "2.1", optional = true }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.0", features = ["full"] }
