[package]
name = "authkestra-providers"
version = "0.1.1"
edition.workspace = true
description = "Consolidated OAuth providers for the authkestra framework"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
github = []
google = []
discord = ["urlencoding"]

[dependencies]
authkestra-engine = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.13.1", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = { version = "2.1", optional = true }
tracing = "0.1"

[dev-dependencies]
wiremock = "0.6.5"
tokio = { version = "1.0", features = ["full"] }
