[package]
name = "authkestra-session-memory"
version = "0.1.0"
edition = "2021"
description = "In-memory session store for authkestra"
license = "MIT OR Apache-2.0"

[dependencies]
authkestra-engine = { version = "0.1.1", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }
async-trait = "0.1"
tokio = { version = "1.0", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
