[package]
name = "authkestra-session-redis"
version = "0.1.0"
edition = "2021"
description = "Redis session store for authkestra"
license = "MIT OR Apache-2.0"

[dependencies]
authkestra-engine = { version = "0.1.1", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }
async-trait = "0.1"
redis = { version = "0.27", features = ["tokio-comp"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
