[package]
name = "authkestra-session-sql"
version = "0.1.0"
edition = "2021"
description = "SQL session store for authkestra"
license = "MIT OR Apache-2.0"

[dependencies]
authkestra-engine = { version = "0.1.1", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "macros"], default-features = false }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"

[features]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
