[package]
name = "authkestra-session"
version = "0.1.1"
edition = "2021"
description = "Session management interfaces for the authkestra framework"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "session"]
categories = ["authentication", "web-programming"]

[dependencies]
authkestra-engine = { version = "0.1.1", path = "../authkestra-engine" }
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
