[package]
name = "authkestra"
version = "0.1.2"
edition = "2021"
description = "A modular authentication framework for Rust"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "oauth2", "oidc"]
categories = ["authentication"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session", optional = true }
authkestra-oidc = { version = "0.1.2", path = "../authkestra-oidc", optional = true }
authkestra-axum = { version = "0.1.2", path = "../authkestra-axum", optional = true }
authkestra-actix = { version = "0.1.2", path = "../authkestra-actix", optional = true }
authkestra-providers-github = { version = "0.1.1", path = "../authkestra-providers-github", optional = true }
authkestra-providers-google = { version = "0.1.1", path = "../authkestra-providers-google", optional = true }
authkestra-providers-discord = { version = "0.1.1", path = "../authkestra-providers-discord", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
authkestra-session-memory = { version = "0.1.0", path = "../authkestra-session-memory" }

[features]
default = []
full = ["flow", "session", "token", "oidc", "axum", "actix", "github", "google", "discord"]

# Core features
flow = ["authkestra-engine/flow"]
session = ["dep:authkestra-session", "authkestra-engine/session"]
token = ["authkestra-engine/token"]
oidc = ["dep:authkestra-oidc"]

# Web frameworks
axum = ["dep:authkestra-axum", "authkestra-axum/flow", "authkestra-axum/session", "authkestra-axum/token", "authkestra-axum/guard"]
actix = ["dep:authkestra-actix", "authkestra-actix/flow", "authkestra-actix/session", "authkestra-actix/token", "authkestra-actix/guard"]

# Providers
github = ["dep:authkestra-providers-github"]
google = ["dep:authkestra-providers-google"]
discord = ["dep:authkestra-providers-discord"]
