[package]
name = "authkestra"
version = "0.1.2"
edition = "2021"
description = "A modular authentication framework for Rust"
repository = "https://github.com/marcjazz/authkestra"
license = "MIT OR Apache-2.0"
keywords = ["auth", "authentication", "oauth2", "oidc"]
categories = ["authentication"]

[dependencies]
authkestra-engine = { version = "0.1.2", path = "../authkestra-engine" }
authkestra-session = { version = "0.1.1", path = "../authkestra-session", optional = true }
authkestra-oidc = { version = "0.1.2", path = "../authkestra-oidc", optional = true }
authkestra-axum = { version = "0.1.2", path = "../authkestra-axum", optional = true }
authkestra-actix = { version = "0.1.2", path = "../authkestra-actix", optional = true }
authkestra-providers = { version = "0.1.1", path = "../authkestra-providers", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
authkestra-session = { version = "0.1.1", path = "../authkestra-session" }

[features]
default = []
full = ["flow", "session", "token", "oidc", "axum", "actix", "github", "google", "discord"]

# Core features
flow = ["authkestra-engine/flow"]
session = ["dep:authkestra-session", "authkestra-engine/session"]
token = ["authkestra-engine/token"]
oidc = ["dep:authkestra-oidc"]

# Web frameworks
axum = ["dep:authkestra-axum", "authkestra-axum/flow", "authkestra-axum/session", "authkestra-axum/token", "authkestra-axum/resource"]
actix = ["dep:authkestra-actix", "authkestra-actix/flow", "authkestra-actix/session", "authkestra-actix/token", "authkestra-actix/resource"]

# Providers
github = ["authkestra-providers/github"]
google = ["authkestra-providers/google"]
discord = ["authkestra-providers/discord"]

