[package]
name = "authly-providers-discord"
version = "0.1.0"
edition = "2021"
description = "Discord OAuth provider for the authly framework"
repository = "https://github.com/marcorichetta/authly-rs"
license = "MIT OR Apache-2.0"
keywords = ["auth", "oauth2", "discord"]
categories = ["authentication"]

[dependencies]
authly-core = { path = "../authly-core" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

[dev-dependencies]
wiremock = "0.5"
tokio = { version = "1.0", features = ["full"] }
