[package]
name = "authly-session"
version = "0.1.0"
edition = "2021"

[features]
default = []
store-redis = ["dep:redis"]
store-sqlx = ["dep:sqlx"]
postgres = ["store-sqlx", "sqlx/postgres"]
mysql = ["store-sqlx", "sqlx/mysql"]
sqlite = ["store-sqlx", "sqlx/sqlite"]

[dependencies]
authly-core = { path = "../authly-core" }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.25", features = ["tokio-comp"], optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "tls-native-tls"], default-features = false, optional = true }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
