[package]
name = "authkestra-actix"
version = "0.2.0"
edition.workspace = true
description = "Actix-web integration for the authkestra authentication framework"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
authkestra-engine = { workspace = true }
authkestra-resource = { workspace = true, optional = true }
authkestra-op = { workspace = true, optional = true }
authkestra-macros = { workspace = true, optional = true, features = ["actix"] }
actix-web = "4"
actix-utils = "3"
futures-util = "0.3"
futures = "0.3"
jsonwebtoken = "10.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
http = "1"

[features]
default = []
session = ["authkestra-engine/session"]
flow = ["authkestra-engine/flow", "authkestra-engine/session", "authkestra-engine/token"]
token = ["authkestra-engine/token"]
resource = ["dep:authkestra-resource"]
op = ["dep:authkestra-op", "session", "token"]
macros = ["dep:authkestra-macros"]
