[package]
name = "authkestra-macros"
version = "0.2.0"
edition.workspace = true
authors = ["Authkestra Contributors"]
license.workspace = true
description = "Procedural macros for authkestra framework integrations"
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[features]
default = []
axum = []

[dev-dependencies]
trybuild = "1.0"
