[package]
name = "authkestra-session"
version = "0.1.1"
edition.workspace = true
description = "Session management interfaces and implementations for the authkestra framework"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
authkestra-engine = { workspace = true }
async-trait = "0.1"
tracing = "0.1"

# Common optional dependencies
chrono = { version = "0.4", features = ["serde"], optional = true }
serde_json = { version = "1.0", optional = true }

# Memory optional dependencies
tokio = { version = "1.0", features = ["sync"], optional = true }

# Redis optional dependencies
redis = { version = "0.27", features = ["tokio-comp"], optional = true }

# SQL optional dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "chrono", "macros"], default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[features]
default = []
memory = ["dep:tokio", "dep:chrono"]
redis = ["dep:redis", "dep:serde_json", "dep:chrono"]
sql-postgres = ["dep:sqlx", "sqlx/postgres", "dep:serde_json", "dep:chrono"]
sql-mysql = ["dep:sqlx", "sqlx/mysql", "dep:serde_json", "dep:chrono"]
sql-sqlite = ["dep:sqlx", "sqlx/sqlite", "dep:serde_json", "dep:chrono"]
