[package]
name = "authkestra"
version = "0.1.2"
edition.workspace = true
description = "A modular authentication framework for Rust"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
authkestra-engine = { workspace = true }
authkestra-session = { workspace = true, optional = true }
authkestra-oidc = { workspace = true, optional = true }
authkestra-axum = { workspace = true, optional = true }
authkestra-actix = { workspace = true, optional = true }
authkestra-providers = { workspace = true, optional = true }
authkestra-resource = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
authkestra-session = { workspace = true }

[features]
default = []
full = ["flow", "session", "token", "oidc", "axum", "actix", "github", "google", "discord"]

# Core features
flow = ["authkestra-engine/flow"]
session = ["dep:authkestra-session", "authkestra-engine/session"]
token = ["authkestra-engine/token"]
oidc = ["dep:authkestra-oidc"]
resource = ["dep:authkestra-resource", "authkestra-actix?/resource", "authkestra-axum?/resource"]

# Web frameworks
axum = ["dep:authkestra-axum", "authkestra-axum/flow", "authkestra-axum/session", "authkestra-axum/token", "authkestra-axum/resource"]
actix = ["dep:authkestra-actix", "authkestra-actix/flow", "authkestra-actix/session", "authkestra-actix/token", "authkestra-actix/resource"]


# Providers
github = ["authkestra-providers/github"]
google = ["authkestra-providers/google"]
discord = ["authkestra-providers/discord"]
